# chatterstream-tts

./: .gitignore  LICENSE  README.md  agent.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: streaming_server.py
src/chatterstream/: __init__.py  audio_post_processor.py  chunk_vocoder.py  conditioning_cache.py  factory.py  hls_segmenter.py  interfaces.py  opus_encoder.py  pipeline.py  streaming_tts.py  text_processor.py  token_generator.py  types.py
tests/: conftest.py
tests/e2e/: test_full_generation.py
tests/integration/: test_opus_streaming.py  test_streaming_pipeline.py  test_token_to_audio.py
tests/unit/: test_audio_post_processor.py  test_chunk_vocoder.py  test_conditioning_cache.py  test_factory.py  test_hls_segmenter.py  test_opus_encoder.py  test_package_structure.py  test_streaming_pipeline.py  test_streaming_tts.py  test_text_processor.py  test_token_generator.py
