[project]
name = "chatterstream-tts"
version = "0.0.2"
description = "Streaming TTS wrapper for Chatterbox — 3-line API for chunk-by-chunk speech synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Devin Lowe"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "chatterbox-tts==0.1.6",
    "torch>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/devinmlowe/chatterstream-tts"
Repository = "https://github.com/devinmlowe/chatterstream-tts"
Issues = "https://github.com/devinmlowe/chatterstream-tts/issues"

[project.optional-dependencies]
media = ["av>=12.0.0"]
dev = [
    "pytest",
    "pytest-asyncio",
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (requires model weights)",
]
asyncio_mode = "auto"
